<resources>

    <string name="app_name">Unit Converter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="fixer_api_key">720ef29edc70e4927bdef6e0d260ae77</string>
    <string name="td">30842f7c80f80bb3ad8a2fb98195544d</string>

    <string name="basic">Basic</string>
    <string name="science">Science</string>
    <string name="everyday">EVERYDAY</string>
    <string name="other">OTHER</string>
    <string name="calculate">Calculate</string>
    <string name="settings">Settings</string>

    <string name="length">LENGTH</string>
    <string name="currency">CURRENCY</string>
    <string name="weight_cap">WEIGHT</string>
    <string name="area">AREA</string>

    <string name="fuel">FUEL</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="volume">VOLUME</string>
    <string name="data">DATA</string>

    <string name="power">POWER</string>
    <string name="speed">SPEED</string>
    <string name="time">TIME</string>
    <string name="energy">ENERGY</string>

    <string name="bmi">BMI</string>
    <string name="loan">LOAN</string>

    <string name="weight">Weight (kilos)</string>
    <string name="height">Height (centimeters)</string>

    <string name="weight_missing">Please fill-in your weight</string>
    <string name="height_missing">Please fill-in your height</string>

    <string name="loan_amount">Loan amount</string>
    <string name="annual_interest">Annual interest</string>
    <string name="loan_period">Loan term in years</string>

    <string name="monthly_payment">Monthly payment</string>
    <string name="total_amount">Total amount to be paid</string>
    <string name="total_interest">Total interest</string>

    <string name="meters">m</string>
    <string name="μm">μm</string>
    <string name="mm">mm</string>
    <string name="cm">cm</string>
    <string name="dm">dm</string>
    <string name="inch">inch</string>
    <string name="feet">feet</string>
    <string name="yards">yards</string>
    <string name="mile">mile</string>
    <string name="nautical_mile">nautical mile</string>
    <string name="kilometers">km</string>
    <string name="nm">nm</string>
    <string name="fathom">fathom</string>

    <string name="kilos">kilos</string>
    <string name="μg">μg</string>
    <string name="mg">mg</string>
    <string name="g">g</string>
    <string name="lb">lb</string>
    <string name="oz">oz</string>
    <string name="oz_t">oz t</string>
    <string name="grain">grain</string>
    <string name="tonne">tonne</string>
    <string name="ton_uk">ton (uk)</string>
    <string name="ton_us">ton (us)</string>
    <string name="stone_uk">stone (uk)</string>
    <string name="cwt">cwt</string>
    <string name="carat">carat</string>

    <string name="square_meters">m²</string>
    <string name="square_mm">mm²</string>
    <string name="square_cm">cm²</string>
    <string name="square_dm">dm²</string>
    <string name="square_inch">in²</string>
    <string name="square_feet">ft²</string>
    <string name="square_yd">yd²</string>
    <string name="a">a</string>
    <string name="ha">ha</string>
    <string name="square_km">km²</string>
    <string name="acre">acre</string>
    <string name="square_ml">ml²</string>

    <string name="litre">litre</string>
    <string name="ml">ml</string>
    <string name="cl">cl</string>
    <string name="dl">dl</string>
    <string name="cubic_mm">mm³</string>
    <string name="cubic_cm">cm³</string>
    <string name="cubic_dm">dm³</string>
    <string name="cubic_m">m³</string>
    <string name="cubic_in">in³</string>
    <string name="cubic_feet">ft³</string>
    <string name="cubic_yards">yd³</string>
    <string name="gal_uk">gal (uk)</string>
    <string name="gal_us">gal (us)</string>
    <string name="bbl">bbl</string>
    <string name="pt_uk">pt (uk)</string>
    <string name="pt_us">pt (us)</string>
    <string name="fl_oz_us">fl oz (us)</string>
    <string name="tablespoon_uk">tablespoon (uk)</string>
    <string name="teaspoon_uk">teaspoon (uk)</string>

    <string name="km_l">km/l</string>
    <string name="mi_l">mi/l</string>
    <string name="km_gal">km/gal</string>
    <string name="mi_gal_us">mi/gal (uk)</string>
    <string name="mi_gal_uk">mi/gal (uk)</string>

    <string name="watts">watts</string>
    <string name="kwatts">kwatts</string>
    <string name="mwatts">mwatts</string>
    <string name="btu_hour">btu/hour</string>
    <string name="hp">hp</string>
    <string name="ps">ps</string>

    <string name="kmh">kmh</string>
    <string name="mph">mph</string>
    <string name="m_s">m/s</string>
    <string name="ft_s">ft/s</string>
    <string name="knot">knot</string>
    <string name="mach">mach</string>

    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="ms">ms</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="years">years</string>

    <string name="joule">joule</string>
    <string name="kilojoules">kilojoules</string>
    <string name="calorie">calorie</string>
    <string name="kcalorie">kcalorie</string>
    <string name="kwh">kwh</string>
    <string name="btu">btu</string>
    <string name="toe">toe</string>


    <string name="bit">bit</string>
    <string name="_byte">byte</string>
    <string name="kilobits">kilobits</string>
    <string name="kilobyte">kilobyte</string>
    <string name="megabit">megabit</string>
    <string name="megabyte">megabyte</string>
    <string name="gigabit">gigabit</string>
    <string name="gigabyte">gigabyte</string>
    <string name="terabits">terabits</string>
    <string name="terabyte">terabyte</string>

    <string name="celsius">celsius</string>
    <string name="fahrenheit">fahrenheit</string>
    <string name="kelvin">kelvin</string>
    <string name="réaumur">réaumur</string>
    <string name="rankine">rankine</string>

    <string name="bmi_result">Your BMI is : </string>
    <string name="decimals_number">Number of decimal points : </string>

    <string name="currencies">Currencies</string>

</resources>
