<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/basic"
                android:icon="@drawable/ic_home"
                android:title="@string/basic"/>
        <item
                android:id="@+id/science"
                android:icon="@drawable/ic_science"
                android:title="@string/science"/>
        <item
                android:id="@+id/calculate"
                android:icon="@drawable/ic_calculator"
                android:title="@string/calculate"/>
        <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
    </group>

</menu>
