<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@drawable/background_degrade"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Tabs.MainActivityTabs">


        <android.support.design.widget.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/app_bar_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:theme="@style/AppTheme.AppBarOverlay"
        >

            <android.support.v7.widget.Toolbar
                    android:id="@+id/main_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

            <android.support.design.widget.TabLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabTextColor="@color/white"
                    android:id="@+id/main_tab_layout">

                <android.support.design.widget.TabItem android:layout_width="wrap_content"
                                                       android:layout_height="wrap_content"
                                                       android:text="@string/basic"/>
                <android.support.design.widget.TabItem android:layout_width="wrap_content"
                                                       android:layout_height="wrap_content"
                                                       android:text="@string/everyday"/>
                <android.support.design.widget.TabItem android:layout_width="wrap_content"
                                                       android:layout_height="wrap_content"
                                                       android:text="@string/other"/>
                <android.support.design.widget.TabItem android:layout_width="wrap_content"
                                                       android:layout_height="wrap_content"
                                                       android:text="@string/calculate"/>

            </android.support.design.widget.TabLayout>

        </android.support.design.widget.AppBarLayout>



        <android.support.v4.view.ViewPager
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/pager"
                app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

        </android.support.v4.view.ViewPager>


    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_main"
            app:menu="@menu/activity_main_drawer" android:visibility="gone"/>

</android.support.v4.widget.DrawerLayout>
