<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/fr_loan_input_layout_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textColorHint="@color/white"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/loan_amount"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" >

        <EditText
                android:id="@+id/fr_loan_input_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="numberDecimal"
                android:textSize="@dimen/text_size"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/fr_loan_input_layout_interest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/annual_interest"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/fr_loan_input_layout_amount"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent">

        <EditText
                android:id="@+id/fr_loan_input_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="numberDecimal"
                android:textSize="@dimen/text_size"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/fr_loan_input_layout_period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/loan_period"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/fr_loan_input_layout_interest"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent">

        <EditText
                android:id="@+id/fr_loan_input_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="number"
                android:textSize="@dimen/text_size"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fr_loan_installment"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/fr_loan_input_layout_period"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fr_loan_total_amount"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/fr_loan_installment"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fr_loan_interest"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/fr_loan_total_amount"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"/>


</android.support.constraint.ConstraintLayout>